[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Attacks/Flames/BurnFlame1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Attacks/Flames/BurnFlame2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Scripts/Attacks/Flames/BurnType2.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "burning",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 38.938, 53.6672 )

[node name="BurnType2" type="Area2D"]
z_index = 1
collision_mask = 5
script = ExtResource( 3 )

[node name="FlameBurn" type="AnimatedSprite" parent="."]
scale = Vector2( 0.463497, 0.683685 )
frames = SubResource( 1 )
animation = "burning"
speed_scale = 5.0
playing = true

[node name="BurnArea" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true
[connection signal="area_entered" from="." to="." method="_on_BurnType2_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_BurnType2_body_entered"]
